feat:增加手动取消网络请求功能,修复参数配置发现的BUG